import org.apache.tools.ant.filters.ReplaceTokens

subprojects {
    apply plugin: 'java-library'
    group 'me.colingrimes.tweaky'
    version '1.13'

    java {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }

    repositories {
        mavenCentral()
        maven { url 'https://repo.papermc.io/repository/maven-public/' }
        maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
        maven { url 'https://repo.rosewooddev.io/repository/public/' }
    }

    processResources {
        filter ReplaceTokens, beginToken: '${', endToken: '}', tokens: ['version': version]
    }
}
